# ProjectStarter

./: CMakeLists.txt  README.md
include/: FileStructure.h
src/: FileStructure.cpp  main.cpp
templates/C++/: CMakeLists.txt
templates/C++ DLL/include/: Example.h
templates/C++ DLL/src/: Example.cpp
templates/C++ Sockets/: CMakeLists.txt
templates/C++ Sockets/include/sockets/: ClientSocket.h  Packet.h  ServerSocket.h  Socket.h  Sockets.h
templates/C++ Sockets/src/: main.cpp
templates/C++ Sockets/src/sockets/: ClientSocket.cpp  Packet.cpp  ServerSocket.cpp  Socket.cpp
templates/C++ Window/: CMakeLists.txt
templates/C++ Window/include/: Colour.h  Window.h
templates/C++ Window/include/window/: Renderable.h  Window.h
templates/C++ Window/src/: Callbacks.cpp  Colour.cpp  Window.cpp  glad.c  main.cpp
templates/C++ Window/src/window/: Library.cpp  RenderManager.cpp  Renderable.cpp  Window.cpp  WindowManager.cpp
